--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     // Retrofit Scalars Converter
